# duckdb

./: .gitignore  CMakeLists.txt  Makefile
.github.OFF/workflows/: cifuzz.yml
extension/datadocs/: CMakeLists.txt  column.cpp  comparison_functions.cpp  csv_reader.cpp  datadocs_extension.cpp  file_reader.cpp  inferrer.cpp  ingest.cpp  ingest_schema.cpp  json_reader.cpp  parse_num.cpp  type_conv.cpp  utility.cpp  variant.cpp  variant_operators.cpp  vector_proxy.cpp  wkt.cpp  xls_reader.cpp  xml_reader.cpp  zip_reader.cpp
extension/datadocs/cmake/boost/: boost.txt.in
extension/datadocs/cmake/icu/: icu.txt.in
extension/datadocs/cmake/libexpat/: libexpat.txt.in
extension/datadocs/cmake/zlib/: zconf.h.cmakein  zlib.cmake.txt  zlib.txt.in
extension/datadocs/contrib/rapidjson/: CMakeLists.txt
extension/datadocs/geo/: geo-extension.cpp  geo-functions.cpp
extension/datadocs/geo/include/: geo_aggregate_function.hpp
extension/datadocs/geo/postgis/: lwgeom_ogc.cpp
extension/datadocs/include/: column.hpp  csv_reader.h  datadocs.hpp  datadocs_extension.hpp  debug.h  file_reader.h  inferrer.h  inferrer_impl.h  ingest_schema.hpp  json.h  json_reader.h  type_conv.h  utility.h  vector_proxy.hpp  xls_reader.h  xml_reader.h  zip_reader.h
extension/datadocs/include/boost_exc/spirit/home/x3/auxiliary/: guard.hpp
extension/datadocs/include/boost_exc/spirit/home/x3/nonterminal/detail/: rule.hpp
extension/datadocs/xls/: zip_memory.cpp
extension/datadocs/xls/xlsx/: xlsxio_read.h
scripts/: build-duckdb-for-datadocs.sh  debug-file-io-for-datadocs.sh
src/main/extension/: extension_helper.cpp
test/sql/datadocs/: compare_any.test  operator_any.test
